// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTranslation returns empty objects renders immediately and after waiting for language resolve 1`] = `
<span>
  Hello world
</span>
`;

exports[`getTranslation returns empty objects renders immediately and after waiting for language resolve 2`] = `
<span>
  Hello world
</span>
`;

exports[`getTranslation returns jed objects renders default language, then translated language, with callback 1`] = `
<span>
  1 dog
  , 
  2 dogs
</span>
`;

exports[`getTranslation returns jed objects renders default language, then translated language, with callback 2`] = `
<span>
  1 hunden
  , 
  2 hundra
</span>
`;

exports[`getTranslation returns jed objects renders default language, then translated language, without callback 1`] = `
<span>
  1 dog
  , 
  2 dogs
</span>
`;

exports[`getTranslation returns jed objects renders default language, then translated language, without callback 2`] = `
<span>
  1 hunden
  , 
  2 hundra
</span>
`;

exports[`getTranslation returns undefined renders immediately and does not render again 1`] = `
<span>
  Hello world
</span>
`;

exports[`getTranslation returns undefined renders immediately and does not render again 2`] = `
<span>
  Hello world
</span>
`;
